package tilegame;

public class Main {

    public static void main(String[] args) {
	  Game game =   new Game("Other life" ,1800,960);
	  game.start();
    }
}
