@startuml

title __TILEGAME's Class Diagram__\n

  namespace tilegame {
    class tilegame.Animation {
        - frames : BufferedImage[]
        - index : int
        - lastTime : long
        - speed : int
        - timer : long
        + Animation()
        + getCurrentFrames()
        + tick()
    }
  }
  

  namespace tilegame {
    class tilegame.Game {
        + title : String
        ~ x : int
        - bs : BufferStrategy
        - g : Graphics
        - height : int
        - running : boolean
        - thread : Thread
        - width : int
        + Game()
        + getGameCamera()
        + getHeight()
        + getKeyManager()
        + getMouseManager()
        + getWidth()
        + run()
        + start()
        + stop()
        - init()
        - render()
        - tick()
    }
  }
  

  namespace tilegame {
    class tilegame.Handler {
        + Handler()
        + getGame()
        + getGameCamera()
        + getHeight()
        + getKeyManager()
        + getMouseManager()
        + getWidth()
        + getWorld()
        + setGame()
        + setWorld()
    }
  }
  

  namespace tilegame {
    class tilegame.Main {
        {static} + main()
    }
  }
  

  namespace tilegame {
    class tilegame.World {
        - height : int
        - spwnX : int
        - spwnY : int
        - tiles : int[][]
        - width : int
        + World()
        + getEntityManager()
        + getHandler()
        + getHeight()
        + getItemManager()
        + getTile()
        + getWidth()
        + render()
        + setHandler()
        + setItemManager()
        + setSpwnX()
        + setSpwnY()
        + tick()
        - loadWorld()
    }
  }
  

  tilegame.Game .up.|> java.lang.Runnable
  tilegame.Game o-- states.State : gameState
  tilegame.Game o-- states.State : meniuState
  tilegame.Game o-- display.Display : display
  tilegame.Game o-- gfx.GameCamera : gameCamera
  tilegame.Game o-- tilegame.Handler : handler
  tilegame.Game o-- tilegame.input.KeyManager : keyManager
  tilegame.Game o-- tilegame.input.MouseManager : mouseManager
  tilegame.Handler o-- tilegame.Game : game
  tilegame.Handler o-- tilegame.World : world
  tilegame.World o-- entities.EntityManager : entityManager
  tilegame.World o-- tilegame.Handler : handler
  tilegame.World o-- tilegame.items.ItemManager : itemManager


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
